cmake_minimum_required(VERSION 3.19)
project(crypto)

include_directories(./includes) 
include_directories(./libft/includes) 

add_library(ft
libft/sources/ft_printf.c
libft/sources/print.c
libft/sources/read.c
libft/sources/search.c
libft/sources/type.c
libft/sources/value.c
libft/sources/wprint.c
libft/sources/print_str.c
libft/sources/utils.c
libft/sources/ft_strf.c
libft/sources/ft_put.c
libft/libft/ft_strlen.c
libft/libft/ft_memset.c
libft/libft/ft_strdup.c
libft/libft/ft_bzero.c
libft/libft/ft_memcpy.c
libft/libft/ft_memccpy.c
libft/libft/ft_memmove.c
libft/libft/ft_memchr.c
libft/libft/ft_memcmp.c
libft/libft/ft_strcpy.c
libft/libft/ft_strncpy.c
libft/libft/ft_strcat.c
libft/libft/ft_strncat.c
libft/libft/ft_strlcat.c
libft/libft/ft_strchr.c
libft/libft/ft_strrchr.c
libft/libft/ft_strstr.c
libft/libft/ft_strnstr.c
libft/libft/ft_strcmp.c
libft/libft/ft_strncmp.c
libft/libft/ft_atoi.c
libft/libft/ft_isalpha.c
libft/libft/ft_isdigit.c
libft/libft/ft_isalnum.c
libft/libft/ft_isascii.c
libft/libft/ft_isprint.c
libft/libft/ft_tolower.c
libft/libft/ft_toupper.c
libft/libft/ft_memalloc.c
libft/libft/ft_memdel.c
libft/libft/ft_strnew.c
libft/libft/ft_strdel.c
libft/libft/ft_strclr.c
libft/libft/ft_striter.c
libft/libft/ft_striteri.c
libft/libft/ft_strmap.c
libft/libft/ft_strmapi.c
libft/libft/ft_strequ.c
libft/libft/ft_strnequ.c
libft/libft/ft_strsub.c
libft/libft/ft_strjoin.c
libft/libft/ft_strtrim.c
libft/libft/ft_strsplit.c
libft/libft/ft_itoa.c
libft/libft/ft_putchar_fd.c
libft/libft/ft_putstr_fd.c
libft/libft/ft_putendl_fd.c
libft/libft/ft_putnbr_fd.c
libft/libft/ft_putchar.c
libft/libft/ft_putstr.c
libft/libft/ft_putendl.c
libft/libft/ft_putnbr.c
libft/libft/ft_lstnew.c
libft/libft/ft_lstdelone.c
libft/libft/ft_lstdel.c
libft/libft/ft_lstadd.c
libft/libft/ft_lstiter.c
libft/libft/ft_lstmap.c
libft/libft/ft_lstfind.c
libft/libft/ft_lstadd_end.c
libft/libft/ft_lstadd_after.c
libft/libft/ft_lstadd_before.c
libft/libft/ft_lstbefore.c
libft/libft/ft_lstdelin.c
libft/libft/ft_lstsize.c
libft/libft/ft_lstsort.c
libft/libft/ft_lstadd_sorted.c
libft/libft/ft_lstsplit.c
libft/libft/nbrcmp.c
libft/libft/ft_lstmaxsize.c
libft/libft/ft_deltab.c
libft/libft/get_next_line.c
libft/libft/ft_itoa_base.c
libft/libft/significant_bit.c
libft/libft/ft_putwchar.c
libft/libft/ft_ftoa.c
libft/libft/ft_isin.c
libft/libft/ft_sorttab.c
libft/libft/ft_readstr.c
libft/libft/ft_random.c
libft/libft/ft_isint.c
libft/libft/ft_explode.c
libft/libft/ft_replace.c
libft/libft/ft_implode.c
libft/libft/my_fork.c
libft/libft/ft_putwstr.c
libft/libft/ft_strsplit_max.c
libft/libft/ft_create_square.c
libft/libft/ft_inc_tab.c
libft/libft/ft_realloc_tab.c
libft/libft/ft_tab_size.c
libft/libft/ft_freetab.c
libft/libft/ft_print_rep.c
libft/libft/get_next_line.c
libft/libft/ft_strtrim_w.c
libft/libft/ft_strdup_tab.c
libft/libft/ft_implode_tab.c
libft/libft/ft_index_fmatch.c
libft/libft/ft_index_lmatch.c
libft/libft/ft_index_nmatch.c
libft/libft/ft_cut_cur_word.c
libft/libft/ft_split_index.c
libft/libft/ft_trace.c
libft/libft/ft_nbrtrace.c
libft/libft/ft_del_cur_word.c
libft/libft/ft_replace_in_str.c
libft/libft/ft_str_renew.c
)

add_executable(crypto
sources/arg.c
sources/base64.c
sources/base64_command.c
sources/bit.c
sources/check.c
sources/check2.c
sources/command.c
sources/der.c
sources/der2.c
sources/der3.c
sources/des.c
sources/des2.c
sources/des_cypher.c
sources/des_cypher2.c
sources/digest.c
sources/digest2.c
sources/error.c
sources/error2.c
sources/hexa.c
sources/luhn.c
sources/main.c
sources/md5.c
sources/md5_2.c
sources/miller_rabin.c
sources/option.c
sources/option2.c
sources/padding.c
sources/password.c
sources/reader.c
sources/reader2.c
sources/rk.c
sources/rk2.c
sources/rsa.c
sources/rsa2.c
sources/rsa3.c
sources/rsa4.c
sources/rsacmd.c
sources/rsagen.c
sources/rsautl.c
sources/sha256.c
sources/sha256_2.c
sources/tools.c
sources/writer.c
sources/writer2.c
)

target_link_libraries(crypto ft)
